refact: adding user register endpoint
